# tagging

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: cli.rs  git.rs  git_tests.rs  lib.rs  main.rs  tag.rs
src/git/: mod.rs  tests.rs
