[package]
name = "tagging"
version = "0.1.0"
authors = ["86 <triaedz@gmail.com>"]
edition = "2018"
description = "tagging is a cli tool to support git tagging easily. What tagging can do is just adding incremented tags based on sematic versioning."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
semver = "0.10"
anyhow = "1.0"
regex = "1"
